RESOLVED FIXED 30297
SVG - crash on feMerge when input not available
https://bugs.webkit.org/show_bug.cgi?id=30297
Summary SVG - crash on feMerge when input not available
Dirk Schulze
Reported 2009-10-12 00:04:55 PDT
SVG - crash on feMerge when input not available
Attachments
fix for feMerge if one effect doesn't exist (2.40 KB, patch)
2009-10-12 00:11 PDT, Dirk Schulze
eric: review+
eric: commit-queue-
Dirk Schulze
Comment 1 2009-10-12 00:11:02 PDT
Created attachment 41020 [details] fix for feMerge if one effect doesn't exist fix for feMerge if one effect doesn't exist. I'll create test results at home.
Eric Seidel (no email)
Comment 2 2009-10-12 07:06:59 PDT
Comment on attachment 41020 [details] fix for feMerge if one effect doesn't exist The change and test looks fine. But it looks like you need layout test results. Please add results and update the ChangeLog accordingly before landing.
Eric Seidel (no email)
Comment 3 2009-10-12 07:08:06 PDT
Comment on attachment 41020 [details] fix for feMerge if one effect doesn't exist Also, ideally the test case woudl make clear that it's just not supposed to crash. Probably a comment in the SVG file woudl help. Adding text to the SVG file would make the results platform specific. You could also add a 100x100 green square to the SVG, so that people looking at it visually would know that it passes.
Dirk Schulze
Comment 4 2009-10-12 14:20:50 PDT
landed in r49472.
Note You need to log in before you can comment on or make changes to this bug.