2009-10-12  Dirk Schulze  <krit@webkit.org>

Reviewed by Eric Seidel.

        SVG - crash on feMerge when input not available
        [https://bugs.webkit.org/show_bug.cgi?id=30297]

        Make a early return in SVGFEMergeElement if the needed
        filter effect doesn't exist.

        Test: svg/filters/feMerge-wrong-input.svg

        * svg/SVGFEMergeElement.cpp:
        (WebCore::SVGFEMergeElement::build):

2009-10-12  Dirk Schulze  <krit@webkit.org>

        Reviewed by Eirc Seidel.

        feMergeNod has a reference to an effect that doesn't exist. This test will
        check if SVGFEMergeElement handles this correctly and stops the filter process.

        * svg/filters/feMerge-wrong-input-expected.checksum: Added.
        * svg/filters/feMerge-wrong-input-expected.png: Added.
        * svg/filters/feMerge-wrong-input-expected.txt: Added.
        * svg/filters/feMerge-wrong-input.svg: Added.


Canonical link: https://commits.webkit.org/40971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49472 268f45cc-cd09-0410-ab3c-d52691b4dbfc